Aboutpage  At breakpoint 530 please remove break in contact us to learn title.Solved

--- a/css/media.css
+++ b/css/media.css
@@ -232,6 +232,11 @@
         margin-left: 4rem;
     }
  }
+ @media only screen and (max-width: 632px){
+     .contact_us h3 br{
+         display: none;
+     }
+ }
 @media only screen and (max-width: 500px){
     .cost-reduce-listing .col-md-2{
         max-width: 100%;
